--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,12 @@
-<h1>Lemon Mart</h1>
+<div class="container">
+  <img src="./assets/images/menu.svg" alt="menu">
+  <header>
+    <img src="./assets/images/logo.png" alt="logo">
+    <h1>Lemon Mart</h1>
+  </header>
+  <section class="profile">
+    <img src="./assets/images/user.svg" alt="user">
+    <img src="./assets/images/lock-open.svg" alt="lock">
+  </section>
+</div>
+<router-outlet></router-outlet>
