ui: add manager and its child components

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
 <div class="container">
   <h1>Hello, Limoncu!</h1>
-  <button>Log in</button>
+  <button routerLink="/manager">Login as manager</button>
 </div>
