--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <img src="./assets/images/menu.svg" alt="menu">
-  <header>
+  <header routerLink="/">
     <img src="./assets/images/logo.png" alt="logo">
     <h1>Lemon Mart</h1>
   </header>
